<?xml version="1.0"?>
<package format="2">
    <name>ouster_decoder</name>
    <version>0.1.0</version>
    <description>Ouster decoder</description>
    <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>pcl_conversions</depend>
    <depend>pcl_ros</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>diagnostic_updater</depend>

    <depend>ouster_ros</depend>

    <export></export>
</package>
