<?xml version="1.0"?>
<package format="2">
  <name>ouster_decoder</name>
  <version>0.0.0</version>
  <description>The ouster_decoder package</description>

  <maintainer email="jasonah@seas.upenn.edu">Jason Hughes</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>

  <depend>ouster_ros</depend>

  <export>
  </export>
</package>
